--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="header-left">
-      <img src="icons/icon48.png" class="logo" alt="logo">
+      <img src="icon48.png" class="logo" alt="logo">
       <h1>Your Saved Progress</h1>
     </div>
 
