--- a/popup.html
+++ b/popup.html
@@ -40,8 +40,12 @@
           <option value="progress_desc">Progress</option>
         </select>
         <button id="viewToggle" class="btn">Toggle View</button>
+        <label style="margin-left:auto;display:flex;align-items:center;gap:6px">
+          <input type="checkbox" id="pinnedOnly" /> Pinned only
+        </label>
       </div>
-    </div>
+      <div class="row" id="quickStats" style="font-size:13px;opacity:0.9"></div>
+    </section>
 
     <section id="bookmarks" class="card">
       <h2>⭐ Saved Items</h2>
